--- a/jobBoardGithub/index.html
+++ b/jobBoardGithub/index.html
@@ -85,7 +85,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!--Data File-->
-    <script src="https://cdn.jsdelivr.net/gh/[user]/[repo]@[ver.]/file or path"></script> <!--Make sure to input the file path based on the format below 
+    <script src="https://cdn.jsdelivr.net/gh/[user]/[repo]@[ver.]/file or path"></script> <!--Make sure to input the file path based on the template or format below 
     <script src="https://cdn.jsdelivr.net/gh/Keko787/JobBoard-For-Squarespace/jobBoardGithub/data.js"></script>-->
 
     <!--bootstrap CSS Library/Stylesheet-->
