--- a/jobBoardGithub/supported assets/jobBoard2_2_nohead.html
+++ b/jobBoardGithub/supported assets/jobBoard2_2_nohead.html
@@ -60,7 +60,7 @@
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">  <!--where the content appears/ the window size-->
-                          <p>{{ job.description }}</p>
+                          <p v-html="job.description"></p>
                         </div>
                         <div class="modal-footer">
                         <!--<a :href="'https://example.com/job/' + job.id" class="btn btn-primary">Apply</a>-->  <!--debug-->
