--- a/jobBoardGithub/supported assets/jobBoard2_2.html
+++ b/jobBoardGithub/supported assets/jobBoard2_2.html
@@ -117,7 +117,7 @@
 
           .modal-dialog {
             max-height: 90vh;  /* Set a maximum height for the modal dialog */
-            width: 50%;  /* Set the width of the modal dialog */
+            width: 95%;  /* Set the width of the modal dialog and window */
             max-width: 1200px;  /* Set a maximum width for the modal dialog */
           }
     
