--- a/jobBoardGithub/supported assets/jobBoard2_2_nohead.html
+++ b/jobBoardGithub/supported assets/jobBoard2_2_nohead.html
@@ -208,7 +208,7 @@
 
     <!--Make sure to input the file path based on the template or format below 
     <script src="https://cdn.jsdelivr.net/gh/Keko787/JobBoard-For-Squarespace/jobBoardGithub/data-6-22-2023-1020.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/user/repo@ver/path/file.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/user/repo@latest/path/file.js"></script>
     
     Redundant link: <script src="https://cdn.jsdelivr.net/gh/Keko787/JobBoard-For-Squarespace/jobBoardGithub/data-6-22-2023-1020.js"></script>
     --------------------------------------------------------------------------------------------------------------->
