--- a/jobBoardGithub/supported assets/jobBoard2_2_nohead.html
+++ b/jobBoardGithub/supported assets/jobBoard2_2_nohead.html
@@ -118,14 +118,12 @@
     [YOU MUST USE CLASSES AND PUT THE STYLING IN THE PROGRAM 
     AND THE CLASS NAME IN THE DATA AS SHOWN IN THE DATA FILE]*/
 
-    
-
     .position-frontend p{  /*when making classes for the data, unless you want it to affect all elements, make sure to use the element selector as show*/
       color:rgb(16, 18, 163);
     }
 
-    .position-frontend p:nth-of-type(3) {  /*the number dictates which element of that type will be affted
-      */
+    .position-frontend p:nth-of-type(3) {  /*/*the number dictates which element of that type will be affected by order of elements of that type, 
+    so this is affecting the nth p element*/
       background-color: yellow;
     }
    
