--- a/jobBoardGithub/supported assets/noInternal/jobBoard2_3_nohead_noInternal.html
+++ b/jobBoardGithub/supported assets/noInternal/jobBoard2_3_nohead_noInternal.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="modal-footer">
                         <!--<a :href="'https://example.com/job/' + job.id" class="btn btn-primary">Apply</a>-->  <!--debug-->
-                        <a :href="'https://www.aespj.com/job-' + job.locationSlug + '-' + job.department.toLowerCase()" class="btn btn-primary a-button">Apply</a>  <!--Link to application page-->
+                        <a :href="'https://www.example.com/job-' + job.locationSlug + '-' + job.department.toLowerCase()" class="btn btn-primary a-button">Apply</a>  <!--Link to application page-->
                         </div>
                       </div>
                     </div>
