--- a/jobBoardGithub/supported assets/jobBoard2_2.html
+++ b/jobBoardGithub/supported assets/jobBoard2_2.html
@@ -55,7 +55,7 @@
                       <h6 class="card-subtitle mb-2 text-muted">{{job.department}}</h6>
                       <button type="button" class="btn btn-secondary" data-bs-toggle="modal" :data-bs-target="'#jobModal-' + job.id">Job Description</button>
                       <!--<a :href="'https://example.com/job/' + job.id" class="btn btn-primary a-button">Apply</a>-->  <!--debug-->
-                      <a :href="'https://www.aespj.com/job-' + job.locationSlug + '-' + job.department.toLowerCase()" class="btn btn-primary a-button">Apply</a>  <!--Link to application page-->
+                      <a :href="'https://www.example.com/job-' + job.locationSlug + '-' + job.department.toLowerCase()" class="btn btn-primary a-button">Apply</a>  <!--Link to application page-->
                     </div>
                   </div>
 
