--- a/jobBoardGithub/supported assets/noInternal/jobBoard2_3_nohead_noInternal.html
+++ b/jobBoardGithub/supported assets/noInternal/jobBoard2_3_nohead_noInternal.html
@@ -29,7 +29,7 @@
               </div>
               
               <!--Search menu that searches for position, department, and location, but will take the other filters into consideration-->
-              <div>
+              <div class="search-margin">
                 <h3>Search:</h3>
                 <input type="text" v-model="searchQuery" placeholder="Search job positions">
             </div>
@@ -93,7 +93,7 @@
     ---------------------------------------------------------------------------------------------->
 
     <!--CSS File from CDN href Link!!!-->
-    <link href="https://cdn.jsdelivr.net/gh/Keko787/jobBoard-data-test@latest/style-7-10-2023-0242.css" rel="stylesheet" >
+    <link href="https://cdn.jsdelivr.net/gh/Keko787/jobBoard-data-test@latest/style-7-14-2023-0830.css" rel="stylesheet" >
     <!--------------------------------------------------------------------------------------------->
 
     <!--Make sure to input the file path based on the template or format below 
